// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Source selector components renders source selector with default options 1`] = `
Array [
  <div
    className="euiText euiText--medium"
    data-test-subj="datasource-selector-header"
  >
    <h3>
      Select data source
    </h3>
  </div>,
  <div
    className="euiSpacer euiSpacer--s"
  />,
  <div
    className="euiText euiText--small"
  >
    <div
      className="euiTextColor euiTextColor--subdued"
    >
      Select data connection where the data you want to accelerate resides.
    </div>
  </div>,
  <div
    className="euiSpacer euiSpacer--s"
  />,
  <div
    className="euiFormRow"
    id="some_html_id-row"
  >
    <div
      className="euiFormRow__labelWrapper"
    >
      <label
        aria-invalid={false}
        className="euiFormLabel euiFormRow__label"
        htmlFor="some_html_id"
      >
        Data source
      </label>
    </div>
    <div
      className="euiFormRow__fieldWrapper"
    >
      <div
        aria-describedby="some_html_id-help-0"
        aria-expanded={false}
        aria-haspopup="listbox"
        className="euiComboBox"
        onKeyDown={[Function]}
        role="combobox"
      >
        <div
          className="euiFormControlLayout"
        >
          <div
            className="euiFormControlLayout__childrenWrapper"
          >
            <div
              className="euiComboBox__inputWrap euiComboBox__inputWrap--noWrap"
              data-test-subj="comboBoxInput"
              onClick={[Function]}
              tabIndex={-1}
            >
              <p
                className="euiComboBoxPlaceholder"
              >
                Select a data source
              </p>
              <div
                className="euiComboBox__input"
                style={
                  Object {
                    "display": "inline-block",
                    "fontSize": 14,
                  }
                }
              >
                <input
                  aria-controls=""
                  data-test-subj="comboBoxSearchInput"
                  id="some_html_id"
                  onBlur={[Function]}
                  onChange={[Function]}
                  onFocus={[Function]}
                  role="textbox"
                  style={
                    Object {
                      "boxSizing": "content-box",
                      "width": "2px",
                    }
                  }
                  value=""
                />
                <div
                  style={
                    Object {
                      "height": 0,
                      "left": 0,
                      "overflow": "scroll",
                      "position": "absolute",
                      "top": 0,
                      "visibility": "hidden",
                      "whiteSpace": "pre",
                    }
                  }
                />
              </div>
            </div>
            <div
              className="euiFormControlLayoutIcons euiFormControlLayoutIcons--right"
            >
              <button
                aria-label="Open list of options"
                className="euiFormControlLayoutCustomIcon euiFormControlLayoutCustomIcon--clickable"
                data-test-subj="comboBoxToggleListButton"
                onClick={[Function]}
                type="button"
              >
                <svg
                  aria-hidden={true}
                  className="euiIcon euiIcon--medium euiIcon-isLoading euiFormControlLayoutCustomIcon__icon"
                  focusable="false"
                  height={16}
                  role="img"
                  style={null}
                  viewBox="0 0 16 16"
                  width={16}
                  xmlns="http://www.w3.org/2000/svg"
                />
              </button>
            </div>
          </div>
        </div>
      </div>
      <div
        className="euiFormHelpText euiFormRow__text"
        id="some_html_id-help-0"
      >
        A data source has to be configured and active to be able to select it and index data from.
      </div>
    </div>
  </div>,
  <div
    className="euiFormRow"
    id="some_html_id-row"
  >
    <div
      className="euiFormRow__labelWrapper"
    >
      <label
        aria-invalid={false}
        className="euiFormLabel euiFormRow__label"
        htmlFor="some_html_id"
      >
        Database
      </label>
    </div>
    <div
      className="euiFormRow__fieldWrapper"
    >
      <div
        aria-describedby="some_html_id-help-0"
        aria-expanded={false}
        aria-haspopup="listbox"
        className="euiComboBox"
        onKeyDown={[Function]}
        role="combobox"
      >
        <div
          className="euiFormControlLayout"
        >
          <div
            className="euiFormControlLayout__childrenWrapper"
          >
            <div
              className="euiComboBox__inputWrap euiComboBox__inputWrap--noWrap"
              data-test-subj="comboBoxInput"
              onClick={[Function]}
              tabIndex={-1}
            >
              <p
                className="euiComboBoxPlaceholder"
              >
                Select a database
              </p>
              <div
                className="euiComboBox__input"
                style={
                  Object {
                    "display": "inline-block",
                    "fontSize": 14,
                  }
                }
              >
                <input
                  aria-controls=""
                  data-test-subj="comboBoxSearchInput"
                  id="some_html_id"
                  onBlur={[Function]}
                  onChange={[Function]}
                  onFocus={[Function]}
                  role="textbox"
                  style={
                    Object {
                      "boxSizing": "content-box",
                      "width": "2px",
                    }
                  }
                  value=""
                />
                <div
                  style={
                    Object {
                      "height": 0,
                      "left": 0,
                      "overflow": "scroll",
                      "position": "absolute",
                      "top": 0,
                      "visibility": "hidden",
                      "whiteSpace": "pre",
                    }
                  }
                />
              </div>
            </div>
            <div
              className="euiFormControlLayoutIcons euiFormControlLayoutIcons--right"
            >
              <button
                aria-label="Open list of options"
                className="euiFormControlLayoutCustomIcon euiFormControlLayoutCustomIcon--clickable"
                data-test-subj="comboBoxToggleListButton"
                onClick={[Function]}
                type="button"
              >
                <svg
                  aria-hidden={true}
                  className="euiIcon euiIcon--medium euiIcon-isLoading euiFormControlLayoutCustomIcon__icon"
                  focusable="false"
                  height={16}
                  role="img"
                  style={null}
                  viewBox="0 0 16 16"
                  width={16}
                  xmlns="http://www.w3.org/2000/svg"
                />
              </button>
            </div>
          </div>
        </div>
      </div>
      <div
        className="euiFormHelpText euiFormRow__text"
        id="some_html_id-help-0"
      >
        Select the database that contains the tables you'd like to use.
      </div>
    </div>
  </div>,
  <div
    className="euiFormRow"
    id="some_html_id-row"
  >
    <div
      className="euiFormRow__labelWrapper"
    >
      <label
        aria-invalid={false}
        className="euiFormLabel euiFormRow__label"
        htmlFor="some_html_id"
      >
        Table
      </label>
    </div>
    <div
      className="euiFormRow__fieldWrapper"
    >
      <div
        aria-describedby="some_html_id-help-0"
        aria-expanded={false}
        aria-haspopup="listbox"
        className="euiComboBox"
        onKeyDown={[Function]}
        role="combobox"
      >
        <div
          className="euiFormControlLayout"
        >
          <div
            className="euiFormControlLayout__childrenWrapper"
          >
            <div
              className="euiComboBox__inputWrap euiComboBox__inputWrap--noWrap"
              data-test-subj="comboBoxInput"
              onClick={[Function]}
              tabIndex={-1}
            >
              <p
                className="euiComboBoxPlaceholder"
              >
                Select a table
              </p>
              <div
                className="euiComboBox__input"
                style={
                  Object {
                    "display": "inline-block",
                    "fontSize": 14,
                  }
                }
              >
                <input
                  aria-controls=""
                  data-test-subj="comboBoxSearchInput"
                  id="some_html_id"
                  onBlur={[Function]}
                  onChange={[Function]}
                  onFocus={[Function]}
                  role="textbox"
                  style={
                    Object {
                      "boxSizing": "content-box",
                      "width": "2px",
                    }
                  }
                  value=""
                />
                <div
                  style={
                    Object {
                      "height": 0,
                      "left": 0,
                      "overflow": "scroll",
                      "position": "absolute",
                      "top": 0,
                      "visibility": "hidden",
                      "whiteSpace": "pre",
                    }
                  }
                />
              </div>
            </div>
            <div
              className="euiFormControlLayoutIcons euiFormControlLayoutIcons--right"
            >
              <button
                aria-label="Open list of options"
                className="euiFormControlLayoutCustomIcon euiFormControlLayoutCustomIcon--clickable"
                data-test-subj="comboBoxToggleListButton"
                onClick={[Function]}
                type="button"
              >
                <svg
                  aria-hidden={true}
                  className="euiIcon euiIcon--medium euiIcon-isLoading euiFormControlLayoutCustomIcon__icon"
                  focusable="false"
                  height={16}
                  role="img"
                  style={null}
                  viewBox="0 0 16 16"
                  width={16}
                  xmlns="http://www.w3.org/2000/svg"
                />
              </button>
            </div>
          </div>
        </div>
      </div>
      <div
        className="euiFormHelpText euiFormRow__text"
        id="some_html_id-help-0"
      >
        Select the Spark table that has the data you would like to index.
      </div>
    </div>
  </div>,
]
`;

exports[`Source selector components renders source selector with different options 1`] = `
Array [
  <div
    className="euiText euiText--medium"
    data-test-subj="datasource-selector-header"
  >
    <h3>
      Select data source
    </h3>
  </div>,
  <div
    className="euiSpacer euiSpacer--s"
  />,
  <div
    className="euiText euiText--small"
  >
    <div
      className="euiTextColor euiTextColor--subdued"
    >
      Select data connection where the data you want to accelerate resides.
    </div>
  </div>,
  <div
    className="euiSpacer euiSpacer--s"
  />,
  <div
    className="euiFormRow"
    id="some_html_id-row"
  >
    <div
      className="euiFormRow__labelWrapper"
    >
      <label
        aria-invalid={false}
        className="euiFormLabel euiFormRow__label"
        htmlFor="some_html_id"
      >
        Data source
      </label>
    </div>
    <div
      className="euiFormRow__fieldWrapper"
    >
      <div
        aria-describedby="some_html_id-help-0"
        aria-expanded={false}
        aria-haspopup="listbox"
        className="euiComboBox"
        onKeyDown={[Function]}
        role="combobox"
      >
        <div
          className="euiFormControlLayout"
        >
          <div
            className="euiFormControlLayout__childrenWrapper"
          >
            <div
              className="euiComboBox__inputWrap euiComboBox__inputWrap--noWrap"
              data-test-subj="comboBoxInput"
              onClick={[Function]}
              tabIndex={-1}
            >
              <p
                className="euiComboBoxPlaceholder"
              >
                Select a data source
              </p>
              <div
                className="euiComboBox__input"
                style={
                  Object {
                    "display": "inline-block",
                    "fontSize": 14,
                  }
                }
              >
                <input
                  aria-controls=""
                  data-test-subj="comboBoxSearchInput"
                  id="some_html_id"
                  onBlur={[Function]}
                  onChange={[Function]}
                  onFocus={[Function]}
                  role="textbox"
                  style={
                    Object {
                      "boxSizing": "content-box",
                      "width": "2px",
                    }
                  }
                  value=""
                />
                <div
                  style={
                    Object {
                      "height": 0,
                      "left": 0,
                      "overflow": "scroll",
                      "position": "absolute",
                      "top": 0,
                      "visibility": "hidden",
                      "whiteSpace": "pre",
                    }
                  }
                />
              </div>
            </div>
            <div
              className="euiFormControlLayoutIcons euiFormControlLayoutIcons--right"
            >
              <button
                aria-label="Open list of options"
                className="euiFormControlLayoutCustomIcon euiFormControlLayoutCustomIcon--clickable"
                data-test-subj="comboBoxToggleListButton"
                onClick={[Function]}
                type="button"
              >
                <svg
                  aria-hidden={true}
                  className="euiIcon euiIcon--medium euiFormControlLayoutCustomIcon__icon"
                  focusable="false"
                  height={16}
                  role="img"
                  style={null}
                  viewBox="0 0 16 16"
                  width={16}
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M13.069 5.157 8.384 9.768a.546.546 0 0 1-.768 0L2.93 5.158a.552.552 0 0 0-.771 0 .53.53 0 0 0 0 .759l4.684 4.61c.641.631 1.672.63 2.312 0l4.684-4.61a.53.53 0 0 0 0-.76.552.552 0 0 0-.771 0Z"
                    fillRule="non-zero"
                  />
                </svg>
              </button>
            </div>
          </div>
        </div>
      </div>
      <div
        className="euiFormHelpText euiFormRow__text"
        id="some_html_id-help-0"
      >
        A data source has to be configured and active to be able to select it and index data from.
      </div>
    </div>
  </div>,
  <div
    className="euiFormRow"
    id="some_html_id-row"
  >
    <div
      className="euiFormRow__labelWrapper"
    >
      <label
        aria-invalid={false}
        className="euiFormLabel euiFormRow__label"
        htmlFor="some_html_id"
      >
        Database
      </label>
    </div>
    <div
      className="euiFormRow__fieldWrapper"
    >
      <div
        aria-describedby="some_html_id-help-0"
        aria-expanded={false}
        aria-haspopup="listbox"
        className="euiComboBox"
        onKeyDown={[Function]}
        role="combobox"
      >
        <div
          className="euiFormControlLayout"
        >
          <div
            className="euiFormControlLayout__childrenWrapper"
          >
            <div
              className="euiComboBox__inputWrap euiComboBox__inputWrap--noWrap"
              data-test-subj="comboBoxInput"
              onClick={[Function]}
              tabIndex={-1}
            >
              <p
                className="euiComboBoxPlaceholder"
              >
                Select a database
              </p>
              <div
                className="euiComboBox__input"
                style={
                  Object {
                    "display": "inline-block",
                    "fontSize": 14,
                  }
                }
              >
                <input
                  aria-controls=""
                  data-test-subj="comboBoxSearchInput"
                  id="some_html_id"
                  onBlur={[Function]}
                  onChange={[Function]}
                  onFocus={[Function]}
                  role="textbox"
                  style={
                    Object {
                      "boxSizing": "content-box",
                      "width": "2px",
                    }
                  }
                  value=""
                />
                <div
                  style={
                    Object {
                      "height": 0,
                      "left": 0,
                      "overflow": "scroll",
                      "position": "absolute",
                      "top": 0,
                      "visibility": "hidden",
                      "whiteSpace": "pre",
                    }
                  }
                />
              </div>
            </div>
            <div
              className="euiFormControlLayoutIcons euiFormControlLayoutIcons--right"
            >
              <button
                aria-label="Open list of options"
                className="euiFormControlLayoutCustomIcon euiFormControlLayoutCustomIcon--clickable"
                data-test-subj="comboBoxToggleListButton"
                onClick={[Function]}
                type="button"
              >
                <svg
                  aria-hidden={true}
                  className="euiIcon euiIcon--medium euiFormControlLayoutCustomIcon__icon"
                  focusable="false"
                  height={16}
                  role="img"
                  style={null}
                  viewBox="0 0 16 16"
                  width={16}
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M13.069 5.157 8.384 9.768a.546.546 0 0 1-.768 0L2.93 5.158a.552.552 0 0 0-.771 0 .53.53 0 0 0 0 .759l4.684 4.61c.641.631 1.672.63 2.312 0l4.684-4.61a.53.53 0 0 0 0-.76.552.552 0 0 0-.771 0Z"
                    fillRule="non-zero"
                  />
                </svg>
              </button>
            </div>
          </div>
        </div>
      </div>
      <div
        className="euiFormHelpText euiFormRow__text"
        id="some_html_id-help-0"
      >
        Select the database that contains the tables you'd like to use.
      </div>
    </div>
  </div>,
  <div
    className="euiFormRow"
    id="some_html_id-row"
  >
    <div
      className="euiFormRow__labelWrapper"
    >
      <label
        aria-invalid={false}
        className="euiFormLabel euiFormRow__label"
        htmlFor="some_html_id"
      >
        Table
      </label>
    </div>
    <div
      className="euiFormRow__fieldWrapper"
    >
      <div
        aria-describedby="some_html_id-help-0"
        aria-expanded={false}
        aria-haspopup="listbox"
        className="euiComboBox"
        onKeyDown={[Function]}
        role="combobox"
      >
        <div
          className="euiFormControlLayout"
        >
          <div
            className="euiFormControlLayout__childrenWrapper"
          >
            <div
              className="euiComboBox__inputWrap euiComboBox__inputWrap--noWrap"
              data-test-subj="comboBoxInput"
              onClick={[Function]}
              tabIndex={-1}
            >
              <p
                className="euiComboBoxPlaceholder"
              >
                Select a table
              </p>
              <div
                className="euiComboBox__input"
                style={
                  Object {
                    "display": "inline-block",
                    "fontSize": 14,
                  }
                }
              >
                <input
                  aria-controls=""
                  data-test-subj="comboBoxSearchInput"
                  id="some_html_id"
                  onBlur={[Function]}
                  onChange={[Function]}
                  onFocus={[Function]}
                  role="textbox"
                  style={
                    Object {
                      "boxSizing": "content-box",
                      "width": "2px",
                    }
                  }
                  value=""
                />
                <div
                  style={
                    Object {
                      "height": 0,
                      "left": 0,
                      "overflow": "scroll",
                      "position": "absolute",
                      "top": 0,
                      "visibility": "hidden",
                      "whiteSpace": "pre",
                    }
                  }
                />
              </div>
            </div>
            <div
              className="euiFormControlLayoutIcons euiFormControlLayoutIcons--right"
            >
              <button
                aria-label="Open list of options"
                className="euiFormControlLayoutCustomIcon euiFormControlLayoutCustomIcon--clickable"
                data-test-subj="comboBoxToggleListButton"
                onClick={[Function]}
                type="button"
              >
                <svg
                  aria-hidden={true}
                  className="euiIcon euiIcon--medium euiFormControlLayoutCustomIcon__icon"
                  focusable="false"
                  height={16}
                  role="img"
                  style={null}
                  viewBox="0 0 16 16"
                  width={16}
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M13.069 5.157 8.384 9.768a.546.546 0 0 1-.768 0L2.93 5.158a.552.552 0 0 0-.771 0 .53.53 0 0 0 0 .759l4.684 4.61c.641.631 1.672.63 2.312 0l4.684-4.61a.53.53 0 0 0 0-.76.552.552 0 0 0-.771 0Z"
                    fillRule="non-zero"
                  />
                </svg>
              </button>
            </div>
          </div>
        </div>
      </div>
      <div
        className="euiFormHelpText euiFormRow__text"
        id="some_html_id-help-0"
      >
        Select the Spark table that has the data you would like to index.
      </div>
    </div>
  </div>,
]
`;
